# plasma-crystal

./: CMakeLists.txt  Messages.sh  README  applet.cpp  applet.h  crystal.cpp  crystal.h  crystalConfig.ui  crystaldialog.cpp  crystaldialog.h  dashboard.cpp  dashboard.css  dashboard.h  dashboard.html  dialog.cpp  dialog.h  helpers.cpp  imageresourcewidget.cpp  imageresourcewidget.h  imagewidget.cpp  imagewidget.h  mediawiki.cpp  mediawiki.h  plasma-applet-crystal.desktop  ratingwidget.cpp  ratingwidget.h  resourcewidget.cpp  resourcewidget.h  resultview.cpp  resultview.h  resultwebview.cpp  resultwebview.h  resultwidget.cpp  resultwidget.h  stylesheet.cpp  user.css  utils.cpp  utils.h
ontologies/: CMakeLists.txt
resourcewidgets/: contactwidget.cpp  contactwidget.h  emailwidget.cpp  emailwidget.h  imageresourcewidget.cpp  imageresourcewidget.h  videoresourcewidget.cpp  videoresourcewidget.h
